--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link REL=StyleSheet HREF="Style.css" TYPE="text/css" MEDIA=screen>
     <title>Document</title>
 </head>
 <body>
